--- a/lectures/index.html
+++ b/lectures/index.html
@@ -3139,15 +3139,41 @@
     // То есть первое нажатие выведет 'февраль 2025', второе 'март 2025' и так далее.
     // Когда месяцы текущего года закончатся, необходимо увеличить год на единицу и продолжить дальше по аналогии.
     //
+    var parent = document.getElementById('parent');
+    var month = [
+        'январь',
+        'февраль',
+        'март',
+        'апрель',
+        'май',
+        'июнь',
+        'июль',
+        'август',
+        'сентябрь',
+        'октябрь',
+        'ноябрь',
+        'декабрь'
+    ];
+
+
+    parent.innerHTML = showDate(month) + ' ' + String.fromCharCode(26);
+
+    function showDate(arr) {
+        var date = new Date();
+        return month[date.getMonth()] + ' ' + date.getFullYear();
+    }
+
     //     Модифицируйте предыдущую задачу так, чтобы появилась также стрелка,
     //     по нажатию на которую можно будет проматывать месяцы назад.
     //
+
     //     Задачи
     // Реализуйте календарик следующего вида: показаны дни текущего месяца (в ряд),
     // слева стрелка 'предыдущий месяц', справа ссылка 'следующий месяц'.
     // Сверху показан год и месяц, который мы смотрим.
     // Если мы смотрим текущий месяц текущего года - текущий день должен быть как-то выделен.
     //
+
     //     Задачи
     // Определите день недели первого дня текущего месяца.
     //
@@ -3157,6 +3183,7 @@
     //     Определите день недели последнего дня текущего месяца.
     //     Узнайте, через сколько дней от этой даты будет воскресенье.
     //
+
     //     Задачи
     // Выведите на экран ul, заполненный числами от 1 до последнего дня текущего месяца.
     //
@@ -3168,10 +3195,12 @@
     //     Модифицируйте предыдущую задачу так, чтобы после последнего числа текущего месяца были написаны еще и
     //     первые числа следующего месяца так, чтобы конец нашего списка приходился на воскресенье.
     //
+
     //     Календарь
     // Реализуйте квадратный календарик, который будет показывать даты и дни недели за текущий месяц.
     //
     //     Модифицируйте предыдущую задачу так, чтобы сверху над календариком появились стрелки вперед и назад,
     //     с помощью которых можно будет менять просматриваемый месяц.
+
 
 </script>
